Bug 1131382 - Don't trust numCompartments when getting compartment stats (r=luke)