js/src/jsapi.cpp
@@ -168,12 +168,11 @@ JS_GetEmptyString(JSRuntime *rt)
 JS_PUBLIC_API(bool)
 JS_GetCompartmentStats(JSRuntime *rt, CompartmentStatsVector &stats)
 {
-    if (!stats.resizeUninitialized(rt->numCompartments))
-        return false;
-
-    size_t pos = 0;
     for (CompartmentsIter c(rt, WithAtoms); !c.done(); c.next()) {
-        CompartmentTimeStats *stat = &stats[pos];
+        if (!stats.growBy(1))
+            return false;
+
+        CompartmentTimeStats *stat = &stats.back();
         stat->time = c.get()->totalTime;
         stat->compartment = c.get();
         stat->addonId = c.get()->addonId;
@@ -184,7 +183,6 @@ JS_GetCompartmentStats(JSRuntime *rt, CompartmentStatsVector &stats)
         } else {
             strcpy(stat->compartmentName, "<unknown>");
         }
-        pos++;
     }
     return true;
 }
